// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Feature Module as Context with forRoot Component with default providers 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-chip
    style="background-color: rgb(238, 238, 238);"
  >
    <span
      class="text"
    >
      My Chíp
    </span>
    <div
      class="remove"
    >
      <span
        class="x"
      >
        ✕
      </span>
    </div>
  </storybook-chip>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Custom/Feature Module as Context with forRoot Component with overridden provider 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-chip
    style="background-color: rgb(238, 238, 238);"
  >
    <span
      class="text"
    >
      My Chíp
    </span>
    <div
      class="remove"
    >
      <span
        class="x"
      >
        ✕
      </span>
    </div>
  </storybook-chip>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Custom/Feature Module as Context with forRoot Component with self and dependencies declared in its feature module 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-chips-group>
    
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 1"
      style="background-color: rgb(238, 238, 238);"
    >
      <span
        class="text"
      >
        Chíp 1
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 2"
      style="background-color: rgb(238, 238, 238);"
    >
      <span
        class="text"
      >
        Chíp 2
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    
    <div
      class="remove-all"
    >
       Remove All 
    </div>
  </storybook-chips-group>
</storybook-dynamic-app-root>
`;
